syntax = "proto3";

package users;

option go_package = "github.com/softtacos/trulioo-auth/users/v1";

service UsersService {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}

message User {
  uint64 id = 1;
  string email = 2;
}

message CreateUserRequest {
  string email = 1;
  string password = 2;
}

message CreateUserResponse {
  User user = 1;
}

message GetUsersRequest {
  repeated uint64 ids = 1;
}

message GetUsersResponse {
  repeated User users = 1;
}